# neo-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: auth.rs  discord.rs  main.rs
src/binana/: auth.rs
