[package]
name = "NeoRust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-recursion = "1.1.1"
azalea = { git = "https://github.com/azalea-rs/azalea", version = "0.15.0" }
discord-webhook-rs = "1.0.5"
fastrand = "2.3.0"
otp-auth = "0.1.0"
parking_lot = "0.12.5"
rand = "0.9.2"
regex = "1.12.2"
secrecy = "0.10.3"
serenity = "0.12.5"
tokio = "1.49.0"
